--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav>
   <a href="/">Home</a>
-  <a href="/about.html">About</a>
+  <a href="/about.md">About</a>
   <a href="/blog.html">Blog</a>
 </nav>
