--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav>
   <a href="{{ site.baseurl }}/">Home</a>
-  <a href="{{ site.baseurl }}/about.md">About</a>
+  <a href="{{ site.baseurl }}/about.html">About</a>
   <a href="{{ site.baseurl }}/blog.html">Blog</a>
 </nav>
