--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>{{ page.title }}</title>
+<title>David Shapiro's Tech Blog - {{ page.title }}</title>
 </head>
 <body>
 {% include navigation.html %}
