--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>David Shapiro's Tech Blog - {{ page.title }}</title>
+<link rel="shortcut icon" type="image/png" href="https://daveshap.github.io/DavidShapiroBlog/assets/favicon.ico"/>
 </head>
 <body>
 {% include navigation.html %}
