--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>David Shapiro's Tech Blog - {{ page.title }}</title>
 <link rel="shortcut icon" type="image/png" href="https://daveshap.github.io/DavidShapiroBlog/assets/favicon.ico"/>
+<link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 {% include navigation.html %}
