--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,7 @@
         <header>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+		  <h3>{{ page.date | date_to_long_string }}</h3>
         </header>
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
