--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,6 +24,7 @@
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 		  <h3>{{ page.date | date_to_long_string }}</h3>
 		  <a href="{{ site.baseurl }}">Home</a>
+		  <a href="{{ site.baseurl }}categories.html">Categories</a>
         </header>
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
