--- a/docs/_sass/jekyll-theme-tactile.scss
+++ b/docs/_sass/jekyll-theme-tactile.scss
@@ -51,7 +51,7 @@ table {
 
 /* LAYOUT STYLES */
 body {
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+  font-family: Helvetica, Verdana, sans-serif;
   font-size: 1em;
   line-height: 1.5;
   color: #404040;  
