--- a/docs/_sass/jekyll-theme-tactile.scss
+++ b/docs/_sass/jekyll-theme-tactile.scss
@@ -244,14 +244,14 @@ form {
 
 h1 {
   font-size: 32px;
-  color: #505050;
+  color: #b5000d;
 }
 
 h2 {
   margin-bottom: 8px;
   font-size: 22px;
   font-weight: bold;
-  color: #303030;
+  color: #c5000d;
 }
 
 h3 {
